[project]
name = "chainlit-swarm"
version = "0.1.0"
description = "A chat interface combining Chainlit's UI capabilities with Open-Swarm's agent system"
dependencies = [
    "chainlit",
    "pyodbc",
    "pydantic==2.10.1",
    "matplotlib",
    "selenium",
    "swarm @ git+https://github.com/marcusschiesser/open-swarm.git"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 